--- a/rdr2.htm
+++ b/rdr2.htm
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
         <link rel="stylesheet" href="css/rdr2.css">
 
-       
+       <script data-cfasync="false" src="//dpirwgljl6cjp.cloudfront.net/?wripd=975904"></script>
 
 
         <link rel="preconnect" href="../fonts.gstatic.com/index.html">
